# build-raw-jpeg-matcher-mac-client

./: .gitignore  CHANGELOG.md  design.md  index.html  package-lock.json  package.json  proposal.md  tasks.md  tsconfig.json  vite.config.ts
.github/workflows/: build-installers.yml  deploy-github-pages.yml  sync-gitee-pages.yml
docs/: DESIGN.md
gitee-pages/: README.md  app.js  index.html  latest-cache.json  styles.css
openspec/changes/add-bidirectional-raw-image-matching/: design.md  proposal.md  tasks.md
openspec/changes/add-bidirectional-raw-image-matching/specs/bidirectional-file-matching/: spec.md
openspec/changes/add-bidirectional-raw-image-matching/specs/match-conflict-review/: spec.md
openspec/changes/add-bidirectional-raw-image-matching/specs/match-direction-selection/: spec.md
openspec/changes/add-glass-text-watermark/: design.md  proposal.md  tasks.md
openspec/changes/add-watermark-tab/: design.md  proposal.md  tasks.md
openspec/changes/rebuild-pixcake-style-watermark/: design.md  proposal.md  tasks.md
openspec/changes/unify-export-feedback/: design.md  proposal.md  tasks.md
release/: README.md  latest.example.json
reports/: apple-design-ui-optimization-report-2026-07-17.html  apple-ui-audit-report-2026-07-17.html  tauri-ui-audit-report.html  tauri-ui-new-version-report.html
scripts/: finalize-macos-dmg.sh  prepare-release-assets.mjs  sync-gitee-pages.mjs  sync-gitee-release.mjs
specs/photo-source-selection/: spec.md
specs/raw-conflict-review/: spec.md
specs/raw-export-workflow/: spec.md
specs/raw-file-matching/: spec.md
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icon.ppm
src-tauri/src/: file_separator.rs  lib.rs  main.rs  raw_matcher.rs  shared.rs  watermark.rs
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  scroll-area.tsx  separator.tsx  tooltip.tsx
src/features/file-separator/: FileSeparatorWorkspace.tsx  types.ts
src/features/raw-matcher/: RawJpegMatcherView.tsx  RawMatcherWorkspace.tsx  state.test.mjs  state.ts  types.ts
src/features/shared/: exportFeedback.test.mjs  exportFeedback.ts  logTail.ts  ui.tsx  workspaceStatus.test.mjs  workspaceStatus.ts
src/features/watermark/: WatermarkView.tsx  WatermarkWorkspace.tsx  state.test.mjs  state.ts  types.ts
(+12 files in other folders)
