[package]
name = "raw-jpeg-matcher"
version = "0.1.32"
description = "A macOS utility for matching selected JPEG files to RAW originals."
authors = ["masongzhi"]
edition = "2021"

[lib]
name = "raw_jpeg_matcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "raw-jpeg-matcher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ab_glyph = "0.2"
fast_image_resize = { version = "6", features = ["image"] }
fontdb = "0.23"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.27", default-features = false, features = ["text"] }
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
walkdir = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[dev-dependencies]
tempfile = "3"
